Basic draggable command ink toolbar

--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -58,29 +58,7 @@
                 </Grid.RowDefinitions>
 
 
-                <CommandBar x:Name="commandBar" RequestedTheme="Dark" DefaultLabelPosition="Right" Grid.Row="0">
-                    <CommandBar.Content>
-                        <InkToolbar x:Name="inkToolbar" TargetInkCanvas="{x:Bind inkCanvas}">
-                            <InkToolbarCustomToolButton x:Name="toolButtonLasso" Content="&#xEF20;" FontFamily="Segoe MDL2 Assets" ToolTipService.ToolTip="Select Strokes"/>
-                            <InkToolbarCustomToolButton x:Name="toolButtonComment"   ToolTipService.ToolTip="Comment Mode">
-                                <FontIcon x:Name="toolButtonCommentGlyph" FontFamily="Segoe MDL2 Assets" Glyph="&#xE90A;" />
-
-
-                                <InkToolbarCustomToolButton.ContextFlyout>
-                                    <Flyout x:Name="StickyFlyout">
-                                        <StackPanel VerticalAlignment="Center" Orientation="Vertical">
-                                            <TextBlock Text="Sticky Note Color"/>
-                                            <StackPanel x:Name="StickyNoteStack" Orientation="Horizontal">
-
-
-                                            </StackPanel>
-
-                                        </StackPanel>
-                                    </Flyout>
-                                </InkToolbarCustomToolButton.ContextFlyout>
-                            </InkToolbarCustomToolButton>
-                        </InkToolbar>
-                    </CommandBar.Content>
+                <CommandBar x:Name="commandBar" RequestedTheme="Light" DefaultLabelPosition="Right" Grid.Row="0">
 
                     <AppBarToggleButton x:Name="AnimationMode" Icon="Next" Label="Animation Mode" Click="Animation_Mode" />
                     <AppBarButton Icon="OutlineStar" Label="Run Animations" Click="Animate_Test"/>
@@ -90,12 +68,38 @@
                     <AppBarSeparator/>
                     <AppBarButton Icon="Home" Label="Back to Menu" Click="BackToMenu"/>
 
-                    
+
                 </CommandBar>
 
                 <Grid Grid.Row="1">
                     <InkCanvas x:Name="inkCanvas"/>
+                    
                     <Canvas x:Name="canvas" Loaded="Canvas_Loaded"/>
+                    <Canvas x:Name="toolbarCanvas">
+                        <Grid x:Name="toolbarGrid">
+                            <Rectangle x:Name="toolbarRect" Fill="#FFD4D4D4"/>
+                            <InkToolbar x:Name="inkToolbar" TargetInkCanvas="{x:Bind inkCanvas}" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <InkToolbarCustomToolButton x:Name="toolButtonLasso" Content="&#xEF20;" FontFamily="Segoe MDL2 Assets" ToolTipService.ToolTip="Select Strokes"/>
+                                <InkToolbarCustomToolButton x:Name="toolButtonComment"   ToolTipService.ToolTip="Comment Mode">
+                                    <FontIcon x:Name="toolButtonCommentGlyph" FontFamily="Segoe MDL2 Assets" Glyph="&#xE90A;" />
+
+
+                                    <InkToolbarCustomToolButton.ContextFlyout>
+                                        <Flyout x:Name="StickyFlyout">
+                                            <StackPanel VerticalAlignment="Center" Orientation="Vertical">
+                                                <TextBlock Text="Sticky Note Color"/>
+                                                <StackPanel x:Name="StickyNoteStack" Orientation="Horizontal">
+
+
+                                                </StackPanel>
+
+                                            </StackPanel>
+                                        </Flyout>
+                                    </InkToolbarCustomToolButton.ContextFlyout>
+                                </InkToolbarCustomToolButton>
+                            </InkToolbar>
+                        </Grid>
+                    </Canvas>
                     <Canvas x:Name="selectionCanvas"/>
                 </Grid>
                 <ScrollViewer Grid.Row="2" VerticalScrollMode="Auto" HorizontalScrollMode="Disabled">
@@ -106,7 +110,7 @@
                                     <Canvas>
                                         <Border Background="{StaticResource animationBlockColor}" ManipulationMode="TranslateX" ManipulationDelta="Drag_AnimationChunk">
                                             <TextBlock TextAlignment="Center" Text="{Binding name}" Height="40" Width="150">
-                                                
+
                                             </TextBlock>
                                             <Border.ContextFlyout>
                                                 <MenuFlyout>
