--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -61,7 +61,7 @@
                 <CommandBar x:Name="commandBar" RequestedTheme="Light" DefaultLabelPosition="Right" Grid.Row="0">
 
                     <AppBarToggleButton x:Name="AnimationMode" Icon="Next" Label="Animation Mode" Click="ToggleAnimationMode" />
-                    <AppBarButton Icon="OutlineStar" Label="Run Animations" Click="RunAllAnimations"/>
+                    <AppBarButton Icon="OutlineStar" Label="Run Animations" Click="RunAllAnimationsTest"/>
                     <AppBarSeparator/>
                     <AppBarButton Icon="Save" Label="Save" Click="SaveAll"/>
                     <AppBarButton Icon="OpenFile" Label="Load" Click="LoadAll"/>
@@ -111,7 +111,7 @@
                                 <StackPanel Background="{StaticResource animationWindowBackground}">
                                     <Canvas>
                                         <Border Background="{StaticResource animationBlockColor}" ManipulationMode="TranslateX" ManipulationDelta="DragAnimationChunk">
-                                            <TextBlock TextAlignment="Center" Text="{Binding name}" Height="40" Width="150">
+                                            <TextBlock TextAlignment="Center" Text="{Binding name}" Height="40" Width="{Binding length}">
 
                                             </TextBlock>
                                             <Border.ContextFlyout>
