--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -99,60 +99,57 @@
                     </Canvas>
                     <Canvas x:Name="polyCanvas" Visibility="Visible" IsHitTestVisible="False" IsDoubleTapEnabled="False" IsHoldingEnabled="False" IsRightTapEnabled="False" IsTapEnabled="False"/>
                 </Grid>
+                
                 <Grid Grid.Row="2">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="20"></RowDefinition>
-                        <RowDefinition Height="4*"></RowDefinition>
+                        <RowDefinition Height="15"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
-                </Grid>
 
-                <Canvas Grid.Row="1">
-                    
-                </Canvas>
-                <ScrollViewer Grid.Row="2" VerticalScrollMode="Auto" HorizontalScrollMode="Auto">
-                    <ListView x:Name="AnimationRepresentation" Background="{StaticResource animationWindowBackground}" SelectionMode="None" IsItemClickEnabled="False">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Background="{StaticResource animationWindowBackground}" Height="55">
-                                    <Canvas>
-                                        <Border Background="{StaticResource animationBlockColor}" ManipulationMode="TranslateX" ManipulationDelta="DragAnimationChunk" ToolTipService.ToolTip="{Binding name}">
-                                            <StackPanel Grid.Column="1" Width="{Binding length}" >
-                                                <TextBlock Text="{Binding name}" HorizontalAlignment="Center"/>
-                                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                                    <Button Click="Replay">
-                                                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE768;"/>
-                                                    </Button>
-                                                    <Button Click="OpenRenameAnimationDialog" FontFamily="Segoe UI">
-                                                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE13E;"/>
-                                                    </Button>
-                                                    <Button Click="DeleteAnimation">
-                                                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE74D;" Foreground="Crimson"/>
-                                                    </Button>
+                    <Canvas Grid.Row="0" x:Name="timelineCanvas" Loaded="TimeLineCanvasLoaded">
+                    </Canvas>
+                    <ScrollViewer Grid.Row="1" VerticalScrollMode="Auto" HorizontalScrollMode="Auto">
+                        <ListView x:Name="AnimationRepresentation" Background="{StaticResource animationWindowBackground}" SelectionMode="None" IsItemClickEnabled="False">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Background="{StaticResource animationWindowBackground}" Height="55">
+                                        <Canvas>
+                                            <Border Background="{StaticResource animationBlockColor}" ManipulationMode="TranslateX" ManipulationDelta="DragAnimationChunk" ToolTipService.ToolTip="{Binding name}">
+                                                <StackPanel Grid.Column="1" Width="{Binding length}" >
+                                                    <TextBlock Text="{Binding name}" HorizontalAlignment="Center"/>
+                                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                                        <Button Click="Replay">
+                                                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE768;"/>
+                                                        </Button>
+                                                        <Button Click="OpenRenameAnimationDialog" FontFamily="Segoe UI">
+                                                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE13E;"/>
+                                                        </Button>
+                                                        <Button Click="DeleteAnimation">
+                                                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE74D;" Foreground="Crimson"/>
+                                                        </Button>
+                                                    </StackPanel>
                                                 </StackPanel>
-                                            </StackPanel>
-                                            <Border.ContextFlyout>
-                                                <MenuFlyout>
-                                                    <MenuFlyoutItem Text="Play" Click="Replay"/>
-                                                    <MenuFlyoutItem Text="Delete" Click="DeleteAnimation"/>
-                                                    <MenuFlyoutItem Text="Rename" Click="OpenRenameAnimationDialog"/>
-                                                </MenuFlyout>
-                                            </Border.ContextFlyout>
-                                        </Border>
-                                    </Canvas>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                </ScrollViewer>
-                <ContentDialog x:Name="renameDialog"
+                                                <Border.ContextFlyout>
+                                                    <MenuFlyout>
+                                                        <MenuFlyoutItem Text="Play" Click="Replay"/>
+                                                        <MenuFlyoutItem Text="Delete" Click="DeleteAnimation"/>
+                                                        <MenuFlyoutItem Text="Rename" Click="OpenRenameAnimationDialog"/>
+                                                    </MenuFlyout>
+                                                </Border.ContextFlyout>
+                                            </Border>
+                                        </Canvas>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </ScrollViewer>
+                    <ContentDialog x:Name="renameDialog"
                    Title="Rename animation"
                    PrimaryButtonText="Ok" IsPrimaryButtonEnabled="False"
                    CloseButtonText="Cancel">
-                    <TextBox x:Name="renameUserInput" PlaceholderText="Please enter new name here" TextChanged="UserInputTextChanged" Height="20"/>
-                </ContentDialog>
-                <Canvas>
-                    
-                </Canvas>
+                        <TextBox x:Name="renameUserInput" PlaceholderText="Please enter new name here" TextChanged="UserInputTextChanged" Height="20"/>
+                    </ContentDialog>
+                </Grid>
             </Grid>
         </SplitView.Content>
     </SplitView>
