--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -82,7 +82,7 @@
                                 <Canvas>
                                     <Border Background="{StaticResource animationBlockColor}" ManipulationMode="TranslateX" ManipulationDelta="DragAnimationChunk" ToolTipService.ToolTip="{Binding name}">
                                         <StackPanel Grid.Column="1" Width="{Binding length}" >
-                                            <TextBlock Text="{Binding name}" HorizontalAlignment="Center"/>
+                                            <TextBlock Text="{Binding Name}" HorizontalAlignment="Center"/>
                                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                                                 <Button IsEnabled="{Binding IsEnabled}" Click="Replay">
                                                     <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE768;"/>
