--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -76,24 +76,21 @@
             <Canvas Grid.Row="1" x:Name="timelineCanvas" Loaded="TimeLineCanvasLoaded">
             </Canvas>
             <ScrollViewer Grid.Row="2" VerticalScrollMode="Auto" HorizontalScrollMode="Auto">
-                <ListView x:Name="AnimationRepresentation" Background="{StaticResource animationWindowBackground}" SelectionMode="None" IsItemClickEnabled="False">
+                <ListView x:Name="AnimationRepresentation" Background="{StaticResource animationWindowBackground}" SelectionMode="None"  IsItemClickEnabled="False">
                     <ListView.ItemTemplate>
                         <DataTemplate>
 
                             <StackPanel Background="{StaticResource animationWindowBackground}" Height="55">
                                 <Canvas>
-                                    <Border Background="{StaticResource animationBlockColor}" ManipulationMode="TranslateX" ManipulationDelta="DragAnimationChunk" ToolTipService.ToolTip="{Binding name}">
+                                    <Border Background="{StaticResource animationBlockColor}" ManipulationMode="TranslateX" PointerEntered="Query" PointerExited="QueryStop" ManipulationDelta="DragAnimationChunk" ToolTipService.ToolTip="{Binding name}">
                                         <StackPanel Grid.Column="1" Width="{Binding length}" >
-                                            <TextBlock Text="{Binding name}" HorizontalAlignment="Center"/>
+                                            <TextBlock Text="{Binding name}" HorizontalAlignment="Center" />
                                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                                                 <Button Click="Replay">
                                                     <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE768;"/>
                                                 </Button>
                                                 <Button Click="OpenRenameAnimationDialog" FontFamily="Segoe UI">
                                                     <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE13E;"/>
-                                                </Button>
-                                                <Button Click="Query">
-                                                    <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE897;"/>
                                                 </Button>
                                                 <Button Click="DeleteAnimation">
                                                     <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE74D;" Foreground="Crimson"/>
