give error message when rename value is invalid and fixed bug with disabling animation when it is created and is running

--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -116,7 +116,10 @@
                    Title="Rename animation"
                    PrimaryButtonText="Ok" IsPrimaryButtonEnabled="False"
                    CloseButtonText="Cancel">
-                <TextBox x:Name="renameUserInput" PlaceholderText="Please enter new name here" TextChanged="UserInputTextChanged" Height="20"/>
+                <StackPanel>
+                    <TextBox x:Name="renameUserInput" PlaceholderText="Please enter new name here" TextChanged="UserInputTextChanged" Height="20"/>
+                    <TextBlock x:Name="userInputError" Text="" Foreground="Red"/>
+                </StackPanel>
             </ContentDialog>
         </Grid>
     </Grid>
